--- a/requirements.txt
+++ b/requirements.txt
@@ -1,18 +1,35 @@
 asgiref==3.5.0
+aspy.refactor-imports==3.0.1
+autoflake==1.4
+black==22.3.0
 cfgv==3.3.1
+click==8.1.2
 distlib==0.3.4
 Django==4.0.3
 django-model-utils==4.2.0
 djangorestframework==3.13.1
 filelock==3.6.0
+flake8==4.0.1
 identify==2.4.12
+mccabe==0.6.1
+mypy-extensions==0.4.3
 nodeenv==1.6.0
+pathspec==0.9.0
 platformdirs==2.5.1
 pre-commit==2.18.1
+psycopg2==2.9.3
+pycodestyle==2.8.0
+pyflakes==2.4.0
 python-dotenv==0.20.0
 pytz==2022.1
+pyupgrade==2.32.0
 PyYAML==6.0
+reorder-python-imports==3.0.1
 six==1.16.0
 sqlparse==0.4.2
+tokenize-rt==4.2.1
 toml==0.10.2
+tomli==2.0.1
+typing_extensions==4.1.1
 virtualenv==20.14.0
+yesqa==1.3.0
